--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -4,3 +4,5 @@
   <p>eye color: <%= @person.eye_color %></p>
   <p>gender: <%= @person.gender %></p>
   <p>alive: <%= @person.alive %></p>
+
+  <%= link_to 'edit', edit_person_path %>
