--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -6,3 +6,4 @@
   <p>alive: <%= @person.alive %></p>
 
   <%= link_to 'edit', edit_person_path %>
+  <%= link_to 'delete', person_path(@person.id), method: :delete %>
