--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @person do |f| %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %>
 
   <%= f.label :age %>
   <%= f.text_field :age %>
