--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -1,4 +1,4 @@
-<h2>name: <%= @person.first_name %></h2>
+<h2>name: <%= @person.full_name %></h2>
   <p>age: <%= @person.age %></p>
   <p>hair color: <%= @person.hair_color %></p>
   <p>eye color: <%= @person.eye_color %></p>
