--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -3,6 +3,9 @@
   <%= f.label :first_name %>
   <%= f.text_field :first_name %>
 
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name %>
+
   <%= f.label :age %>
   <%= f.text_field :age %>
 
